[tool.poetry]
name = "pymint"
version = "0.2.15"
description = "MINT is a human readable language to describe Microfluidic Hardware Netlists. MINT is the name of the Microfluidic Netlist language used to describe microfluidic devices for Fluigi to place and route. Mint is a flavor of (MHDL) Microfluidic Hardware Description Language that can be used to represent Microfluidic Circuits."
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
packages = [ {include = "pymint"}]


[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.2"
install = "^1.3.3"
antlr4-python3-runtime = "^4.8"
parchmint = "^0.2.11"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.5"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
mint-tools = "pymint.cmdline:main"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

