[tool.poetry]
name = "pymint"
version = "0.3.3"
description = "MINT is a human readable language to describe Microfluidic Hardware Netlists. MINT is the name of the Microfluidic Netlist language used to describe microfluidic devices for Fluigi to place and route. Mint is a flavor of (MHDL) Microfluidic Hardware Description Language that can be used to represent Microfluidic Circuits."
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3-Clause"
packages = [ {include = "pymint"}]


[tool.poetry.dependencies]
python = ">=3.8,<3.11"
install = "^1.3.3"
antlr4-python3-runtime = "^4.8"
networkx = "^3.0"
pygraphviz = "^1.9"
pyfiglet = "^0.8.post1"
click = "^8.1.3"
parchmint = "^0.3.5"

[tool.poetry.dev-dependencies]
mypy = "^1.1.1"
flake8 = "^3.8.4"
black = "22.3.0"
rope = "^0.18.0"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
pytest = "^7.1.2"
isort = "^5.10.1"
pip = "^23.0.1"


[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
mint-tools = "pymint.cmdline:default_cli"

[tool.poetry.extras]
docs = ["sphinx"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "./tests/"
]